plugins {
    id 'scala'
    id 'com.diffplug.spotless' version '6.25.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation 'org.scala-lang:scala3-library_3:3.3.1'

    testImplementation('org.scalatest:scalatest_3:3.2.19')
    testImplementation('org.junit.jupiter:junit-jupiter:5.10.1')
    testRuntimeOnly('org.junit.platform:junit-platform-engine:1.13.1')
    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.10.1')
    testRuntimeOnly('org.scalatestplus:junit-5-13_3:3.2.19.0')
}

tasks.withType(ScalaCompile).configureEach {
    scalaCompileOptions.additionalParameters = ['-feature']
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview']
}

test {
    useJUnitPlatform {
        includeEngines('scalatest', 'junit-jupiter')
        testLogging {
            events 'passed', 'skipped', 'failed'
            exceptionFormat 'full'
        }
    }
}

spotless {
    scala {
        scalafmt('3.7.17').configFile(rootProject.file('scala3/.scalafmt.conf'))
    }
}

tasks.named('check') {
    dependsOn tasks.named('spotlessCheck')
}
